# crazysol

./: .gitignore  Anchor.toml  LICENSE  README.md
programs/crazysol/: Cargo.toml
programs/crazysol/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/crazysol/src/instructions/: deposit_from_external_reactor.rs  distill.rs  get_distillable_output.rs  get_pill_potency.rs  give_public_funding.rs  increase_prcrazy_liquidity.rs  incubation_period.rs  initialize.rs  inject.rs  innoculate.rs  mod.rs  mutate.rs  register_scientist.rs  replace_director.rs  switch_emergency_lockdown.rs  update_big_pharma.rs  update_containment_tax_bps.rs  update_reaction_formula.rs
programs/crazysol/src/states/: experiment_state.rs  laboratory_state.rs  mod.rs  reactor_state.rs  scientist_state.rs
programs/crazysol/src/utils/: centrifuge.rs  incubate_serum.rs  mod.rs  security.rs  time.rs
